unpackaged/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Academic_Interest__c</fullName>
        <label>Academic Interest</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Admission_Term__c</fullName>
        <label>Admission Term</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Admit_Year__c</fullName>
        <label>Admit Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_Number__c</fullName>
        <description>Application Number</description>
        <label>(Admissions) Application Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Candidature_End_date__c</fullName>
        <label>Candidature End date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Concurrent_Programmes__c</fullName>
        <label>Concurrent Programmes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_of_Birth__c</fullName>
        <label>Country of Birth</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Year__c</fullName>
        <label>Current Year</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Freshmen</fullName>
                </value>
                <value>
                    <fullName>Sophomore</fullName>
                </value>
                <value>
                    <fullName>Junior</fullName>
                </value>
                <value>
                    <fullName>Senior</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_of_Death__c</fullName>
        <label>Date of Death</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Degree_Name__c</fullName>
        <label>Current Degree Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Disciplinary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disciplinary Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Double_Degree_Name__c</fullName>
        <label>Double Degree Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Emergency_Address__c</fullName>
        <label>Emergency Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Emergency_Email__c</fullName>
        <label>Emergency Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Emergency_Language__c</fullName>
        <label>Emergency Language</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>Bahasa</fullName>
                </value>
                <value>
                    <fullName>Chinese languages</fullName>
                </value>
                <value>
                    <fullName>Indian languages</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Emergency_Name__c</fullName>
        <label>Emergency Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Emergency_Phone__c</fullName>
        <label>Emergency Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Emergency_Relationship__c</fullName>
        <label>Emergency Relationship</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fee_Cohort_Year__c</fullName>
        <label>Fee Cohort Year</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GPA__c</fullName>
        <label>GPA</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Graduation_Year__c</fullName>
        <label>Graduation Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>High_School_City__c</fullName>
        <label>High School City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>High_School_Country__c</fullName>
        <label>High School Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>High_School_Name__c</fullName>
        <label>High School Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hobbies__c</fullName>
        <label>Hobbies</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>Bahasa</fullName>
                </value>
                <value>
                    <fullName>Chinese Language</fullName>
                </value>
                <value>
                    <fullName>India Language</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Length_of_Course__c</fullName>
        <label>Length of Course</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Major__c</fullName>
        <label>Current Major</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Anthropology</fullName>
                </value>
                <value>
                    <fullName>Arts and Humanities</fullName>
                </value>
                <value>
                    <fullName>Economics</fullName>
                </value>
                <value>
                    <fullName>Environmental Studies</fullName>
                </value>
                <value>
                    <fullName>Global Affairs</fullName>
                </value>
                <value>
                    <fullName>History</fullName>
                </value>
                <value>
                    <fullName>Life Sciences</fullName>
                </value>
                <value>
                    <fullName>Literature</fullName>
                </value>
                <value>
                    <fullName>Mathematical and Computational Sciences</fullName>
                </value>
                <value>
                    <fullName>Philosophy</fullName>
                </value>
                <value>
                    <fullName>Physical Sciences</fullName>
                </value>
                <value>
                    <fullName>Politics, Philosophy and Economics</fullName>
                </value>
                <value>
                    <fullName>Psychology</fullName>
                </value>
                <value>
                    <fullName>Urban Studies</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Matric_Year__c</fullName>
        <label>Matric Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Minor__c</fullName>
        <label>Current Minor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Anthropology</fullName>
                </value>
                <value>
                    <fullName>Arts and Humanities</fullName>
                </value>
                <value>
                    <fullName>Economics</fullName>
                </value>
                <value>
                    <fullName>Environmental Studies</fullName>
                </value>
                <value>
                    <fullName>Global Affairs</fullName>
                </value>
                <value>
                    <fullName>History</fullName>
                </value>
                <value>
                    <fullName>Life Sciences</fullName>
                </value>
                <value>
                    <fullName>Literature</fullName>
                </value>
                <value>
                    <fullName>Mathematical and Computational Sciences</fullName>
                </value>
                <value>
                    <fullName>Philosophy</fullName>
                </value>
                <value>
                    <fullName>Physical Sciences</fullName>
                </value>
                <value>
                    <fullName>Politics, Philosophy and Economics</fullName>
                </value>
                <value>
                    <fullName>Psychology</fullName>
                </value>
                <value>
                    <fullName>Urban Studies</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NRIC__c</fullName>
        <label>NRIC/FIN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NSI__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NSI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NUSNET_ID__c</fullName>
        <externalId>true</externalId>
        <label>NUSNET ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Name_of_Head_of_Studies__c</fullName>
        <inlineHelpText>or Academic Advisor if undeclared major</inlineHelpText>
        <label>Name of Head of Studies</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nationality__c</fullName>
        <label>Nationality</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Official_Name__c</fullName>
        <label>Official Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Personal_Email__c</fullName>
        <label>Personal Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Prefered_Name__c</fullName>
        <label>Prefered Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Residential_College__c</fullName>
        <label>Residential College</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Degree_Major__c</fullName>
        <label>Secondary Degree Major</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Semester__c</fullName>
        <label>Semester</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Semester 1</fullName>
                </value>
                <value>
                    <fullName>Semester 2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Singapore_PR__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Singapore PR?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active SEP</fullName>
                </value>
                <value>
                    <fullName>Active LOA</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Student_Identity__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Student ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Student_Pass_Returned__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Student Pass Returned?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Student</fullName>
                </value>
                <value>
                    <fullName>Faculty</fullName>
                </value>
                <value>
                    <fullName>Supervisor</fullName>
                </value>
                <value>
                    <fullName>Head of Study</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>Student_Identity__c</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.ALLOW_PORTAL_SELF_REG</columns>
        <columns>NUSNET_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>equals</operation>
            <value>Yale-NUS Student</value>
        </filters>
        <label>All Students</label>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.BIRTHDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <recordTypes>
        <fullName>Other_Contacts</fullName>
        <active>true</active>
        <description>Faculty, Head of Study, Supervisor...</description>
        <label>Other Contacts</label>
    </recordTypes>
    <recordTypes>
        <fullName>Student</fullName>
        <active>true</active>
        <description>Student information</description>
        <label>Student</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>